fixes highlight region bug

--- a/index.less
+++ b/index.less
@@ -3,15 +3,15 @@ atom-text-editor, atom-text-editor .gutter {
   color: #F1F2F3;
 }
 
-atom-text-editor.is-focused .cursor {
+atom-text-editor.is-focused::shadow .cursor {
   border-color: #AEAFAD;
 }
 
-atom-text-editor.is-focused .selection .region {
+atom-text-editor.is-focused::shadow .selection .region {
   background-color: #4F6164;
 }
 
-atom-text-editor.is-focused .line-number.cursor-line-no-selection, atom-text-editor.is-focused .line.cursor-line {
+atom-text-editor.is-focused::shadow .line-number.cursor-line-no-selection, atom-text-editor.is-focused::shadow .line.cursor-line {
   background-color: #42464C;
 }
 
