missed a few ::shadow

--- a/index.less
+++ b/index.less
@@ -1,4 +1,4 @@
-atom-text-editor, atom-text-editor .gutter {
+atom-text-editor::shadow, atom-text-editor::shadow .gutter {
   background-color: #22282A;
   color: #F1F2F3;
 }
